--- a/index.html
+++ b/index.html
@@ -116,11 +116,22 @@
                 <div class="YT"><iframe width="560" height="315" src="https://www.youtube.com/embed/Zs2vbHQmILQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
             </div>
         </div>
+        <h2>kontakt</h2>
         <div id="contact">
-            <h2>kontakt</h2>
-            <div><a href="tel:665-210-165">ZADZWOŃ</a>/<a href="mailto:lucassilentdisco@gmail.com">NAPISZ</a> (otrzymasz wycenę)</div>
-            <div>Odbierz sprzęt (przyjedziemy/wyślemy wszystko kurierem)</div>
-            <div>Zrób imprezę jakiej jeszcze nie było</div>
+            <div>
+                <span><a href="tel:665-210-165">ZADZWOŃ</a>/<a href="mailto:lucassilentdisco@gmail.com">NAPISZ</a> (otrzymasz wycenę)</span><br>
+                <span>Odbierz sprzęt (przyjedziemy/wyślemy wszystko kurierem)</span><br>
+                <span>Zrób imprezę jakiej jeszcze nie było</span>
+            </div>
+            <form id="form" autocomplete="off">
+                <h2>Napisz do nas!</h2>
+                <h4>Tytuł wiadomości:</h4>
+                <input type="text" name="subject" id="subject">
+                <h4>Treść:</h4>
+                <textarea name="body" id="body"></textarea>
+                <input type="submit" name="submit" id="submit">
+                <div class="message"></div>
+            </form>
         </div>
         <div class="thirdBackground"></div>
         <div id="faq">
@@ -239,6 +250,7 @@
             </span>
         </footer>
     </main>
+    <script src="jquery-3.6.0.min.js"></script>
     <script src="glightbox.min.js"></script>
     <script src="script.js"></script>
 </body>
