--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <nav>
         <img src="imgs\logo.png" class="logo">
         <div class="menuComputer">
-            <a href="#">START</a><a href=#offer>NASZE SŁUCHAWKI</a><a href="#gallery">GALERIA</a><a href="#contact">KONTAKT</a><a href="#faq">FAQ</a><div><a href="https://www.facebook.com/WherEverYouWantLSD/"><img src="imgs/fb.svg" class="socialImg" height="25px"></a><a href="https://www.instagram.com/lucassilentdisco/"><img src="imgs/instagram.svg" class="socialImg" height="25px"></a><a href="https://www.youtube.com/channel/UCmJUpl2619g66Ul42fhaP9w/videos"><img src="imgs/youtube.svg" class="socialImg" height="25px"></a></div>
+            <a href="#">START</a><a href=#offer>NASZE SŁUCHAWKI</a><a href="#gallery">GALERIA</a><a href="#contactScroll">KONTAKT</a><a href="#faq">FAQ</a><div><a href="https://www.facebook.com/WherEverYouWantLSD/"><img src="imgs/fb.svg" class="socialImg" height="25px"></a><a href="https://www.instagram.com/lucassilentdisco/"><img src="imgs/instagram.svg" class="socialImg" height="25px"></a><a href="https://www.youtube.com/channel/UCmJUpl2619g66Ul42fhaP9w/videos"><img src="imgs/youtube.svg" class="socialImg" height="25px"></a></div>
         </div>
         <div class="menuMobile">
             <img src="imgs/bars.svg" height="50px" id="bars">
             <div class="menuLabelsMobile">
-                <a href="#">START</a><a href="#offer">NASZE SŁUCHAWKI</a><a href="#gallery">GALERIA</a><a href="#contact">KONTAKT</a><a href="#faq">FAQ</a><div class="social"><a href="https://www.facebook.com/WherEverYouWantLSD/"><img src="imgs/fb.svg" class="socialImg" height="25px"></a><a href="https://www.instagram.com/lucassilentdisco/"><img src="imgs/instagram.svg" class="socialImg" height="25px"></a><a href="https://www.youtube.com/channel/UCmJUpl2619g66Ul42fhaP9w/videos"><img src="imgs/youtube.svg" class="socialImg" height="25px"></a></div>
+                <a href="#">START</a><a href="#offer">NASZE SŁUCHAWKI</a><a href="#gallery">GALERIA</a><a href="#contactScroll">KONTAKT</a><a href="#faq">FAQ</a><div class="social"><a href="https://www.facebook.com/WherEverYouWantLSD/"><img src="imgs/fb.svg" class="socialImg" height="25px"></a><a href="https://www.instagram.com/lucassilentdisco/"><img src="imgs/instagram.svg" class="socialImg" height="25px"></a><a href="https://www.youtube.com/channel/UCmJUpl2619g66Ul42fhaP9w/videos"><img src="imgs/youtube.svg" class="socialImg" height="25px"></a></div>
             </div>
         </div>
     </nav>
@@ -39,20 +39,20 @@
             <p>
                 To przede wszystkim świetny pomysł na super zabawę.
                 Każdy z uczestników dostaje bezprzewodowe słuchawki odbierające muzykę nadawaną na trzech kanałach. Kolorowe diody LED pokazują kto czego słucha. W każdej chwili możliwa jest zmiana kanału (nadawanej muzyki).
-                To tak jakby być na 3 dyskotekach jednocześnie i za pomocą jednego pstryknięcia móc się przenieść w czasie i przestrzeni. Co ciekawe wokół słychać tylko ciszę I oczywiście śpiew tańczących.
+                To tak jakby być na 3 dyskotekach jednocześnie i za pomocą jednego pstryknięcia móc się przenieść w czasie i przestrzeni. Co ciekawe wokół słychać tylko ciszę i oczywiście śpiew tańczących.
             </p>
             <a class="callToActionButton" href="#faq">SPRAWDŹ FAQ</a>
         </div>
         <div class="firstBackground"></div>
         <div id="offer">
-            <h2>Nasze słuchawki mają najlepszą jakość dostępna w Europie</h2>
+            <h2>Nasze słuchawki mają najlepszą jakość dostępną w Europie</h2>
             <div class="offer">
-                <ul class="cogs">
-                    <li>✔ Super dźwięk, extra bas</li>
-                    <li>✔ Dostępne 3 kanały z muzyką</li>
-                    <li>✔ Podświetlenie LED</li>
-                    <li>✔ Nadajniki stacjonarne 230V (500m zasięgu)</li>
-                    <li>✔ Nadajniki mobilne (bateryjne)</li>
+                <ul class="check">
+                    <li>Super dźwięk, extra bas</li>
+                    <li>Dostępne 3 kanały z muzyką</li>
+                    <li>Podświetlenie LED</li>
+                    <li>Nadajniki stacjonarne 230V (500m zasięgu)</li>
+                    <li>Nadajniki mobilne (bateryjne)</li>
                 </ul>
                 <img src="imgs/headphones.gif" class="headphones">
             </div>
@@ -104,7 +104,8 @@
                 <a href="bigImgs/club5.jpg" class="glightbox" data-gallery="galleryClub"><img src="imgs/club5.jpg"></a>
                 <a href="bigImgs/club6.jpg" class="glightbox" data-gallery="galleryClub"><img src="imgs/club6.jpg"></a>
                 <a href="bigImgs/club7.jpg" class="glightbox" data-gallery="galleryClub"><img src="imgs/club7.jpg"></a>
-                <a href="bigImgs/outside6.jpg" class="glightbox" data-gallery="galleryOutside"><img src="imgs/otuside6.jpg"></a>
+                <a href="bigImgs/house3.jpg" class="glightbox" data-gallery="galleryHouse"><img src="imgs/house3.jpg"></a>
+                <a href="bigImgs/kids4.jpg" class="glightbox" data-gallery="galleryKids"><img src="imgs/kids4.jpg"></a>
                 <a href="bigImgs/wedding4.jpg" class="glightbox" data-gallery="galleryWedding"><img src="imgs/wedding4.jpg"></a>
             </div>
             <div class="flex">
@@ -116,22 +117,46 @@
                 <div class="YT"><iframe width="560" height="315" src="https://www.youtube.com/embed/Zs2vbHQmILQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
             </div>
         </div>
-        <h2>kontakt</h2>
+        <div id="contactScroll">
+            <h2>kontakt</h2>
+        </div>
         <div id="contact">
             <div>
-                <span><a href="tel:665-210-165">ZADZWOŃ</a>/<a href="mailto:lucassilentdisco@gmail.com">NAPISZ</a> (otrzymasz wycenę)</span><br>
-                <span>Odbierz sprzęt (przyjedziemy/wyślemy wszystko kurierem)</span><br>
-                <span>Zrób imprezę jakiej jeszcze nie było</span>
+                <ul class="check">
+                    <li>ZADZWOŃ lub NAPISZ, a otrzymasz wycenę.</li>
+                    <li>Odbierz sprzęt dostarczony przez nas lub kuriera.</li>
+                    <li>Zrób imprezę jakiej jeszcze nie było!</li>
+                </ul>
+                <div class="contactData">
+                    <span class="fontSize">
+                        <h4>Kontakt:</h3>
+                        <a href="mailto:lucassilentdisco@gmail.com"><img src="imgs/envelope.svg" class="envelope">lucassilentdisco@gmail.com</a><br>
+                        <a href="tel:665-210-165"><img src="imgs/phone.svg" class="phone">Łukasz: 665-210-165</a><br>
+                        <a href="tel:669-365-131"><img src="imgs/phone.svg" class="phone">Tomasz: 669-365-131</a>
+                    </span>
+                </div>
             </div>
-            <form id="form" autocomplete="off">
-                <h2>Napisz do nas!</h2>
-                <h4>Tytuł wiadomości:</h4>
-                <input type="text" name="subject" id="subject">
-                <h4>Treść:</h4>
-                <textarea name="body" id="body"></textarea>
-                <input type="submit" name="submit" id="submit">
-                <div class="message"></div>
-            </form>
+            <div class="flex">
+                <div class="formCheck">
+                    <img src="imgs/checkForm.svg" class="formCheckImg">
+                    <h2>Wysłano</h2>
+                </div>
+                <form id="form" autocomplete="off">
+                        <h2>Napisz do nas!</h2>
+                        <h4>Tytuł wiadomości:</h4>
+                        <input type="text" name="subject" id="subject">
+                        <h4>Treść:</h4>
+                        <textarea name="body" id="body"></textarea>
+                        <h4>Telefon:*</h4>
+                        <input type="tel" name="telephone" id="telephone">
+                        <h4>E-mail:*</h4>
+                        <input type="email" name="email" id="email">
+                        <input type="submit" name="submit" id="submit">
+                        <div class="g-recaptcha" data-sitekey="6Lc5sKMeAAAAABm0zL2oFRYPM3_h-pZyala3b3YJ"></div>
+                        <div class="optional"><span>Pola z gwiazdką są nieobowiązkowe</span></div>
+                        <div class="message"></div>
+                </form>
+            </div>
         </div>
         <div class="thirdBackground"></div>
         <div id="faq">
@@ -147,7 +172,7 @@
                 </li>
                 <li class="faqEl">
                     <div class="que">
-                        <span>Mój pierwszy raz - czy dam radę?</span><img class="arrow" src="imgs/arrow.svg">
+                        <span>Moje pierwsze silent disco – czy dam radę?</span><img class="arrow" src="imgs/arrow.svg">
                     </div>
                     <div class="answer">
                         <span>Oczywiście, że tak. Sprzęt jest bardzo prosty w obsłudze. W złożeniu zestawu pomoże minutowy film. Wystarczy podłączyć transmitery do trzech źródeł dźwięku. Może to być laptop, tablet, smartphone, itp. Dostarczamy również odpowiednie okablowanie.</span>
@@ -171,7 +196,7 @@
                 </li>
                 <li class="faqEl">
                     <div class="que">
-                        <span>Jestem zdecydowany(a) - realizacja zamówienia krok po kroku.</span><img class="arrow" src="imgs/arrow.svg">
+                        <span>Jak mogę zamówić? Realizacja krok po kroku.</span><img class="arrow" src="imgs/arrow.svg">
                     </div>
                     <div class="answer">
                         <span>Po nawiązaniu kontaktu (najlepiej mail/telefon) i akceptacji wyceny, sporządzamy prostą umowę najmu (link do wzoru), prosimy o odesłanie skanu podpisanej kopii (via e-mail). Kolejnym krokiem jest przelanie na nasze konto kaucji – zabezpieczenie powierzonego sprzętu. Zestaw Silent Disco wysyłamy kurierem na wskazany adres. Po imprezie zamawiamy kuriera po odbiór spakowanego sprzętu, będzie już miał list przewozowy. Na koniec zwracamy przelewem na konto kaucję, jeśli oczywiście wszystko wraca bez szwanku.</span>
@@ -211,7 +236,7 @@
                 </li>
                 <li class="faqEl">
                     <div class="que">
-                        <span>Możliwości zastosowania, czyli kiedy brak pomysłu na dobrą zabawę.</span><img class="arrow" src="imgs/arrow.svg">
+                        <span>Jak wykorzystać Silent Disco? Czyli inne możliwości zastosowania.</span><img class="arrow" src="imgs/arrow.svg">
                     </div>
                     <div class="answer">
                         <span>Pomysłów jest wiele, ograniczają nas tylko bariery naszej wyobraźni, nieważne czy to pomieszczenie czy plener. Nasze Silent Disco, dzięki nadajnikom bateryjnym, możesz zabrać gdzie tylko chcesz i zrobić tam niezapomnianą imprezę. Nie musisz nawet stać w miejscu – nieduży transmiter można zapiąć na pasku i przemieszczać się. Dyskoteki, Wesela, Koncerty, Parady, Silent Yoga, Beach Bary, Ogrody, ślizgawki na lodowiskach... I dobra zabawa.</span>
