--- a/index.html
+++ b/index.html
@@ -143,17 +143,17 @@
                 </div>
                 <form id="form" autocomplete="off">
                         <h2>Napisz do nas!</h2>
-                        <h4>Tytuł wiadomości:</h4>
+                        <h4>Tytuł wiadomości:*</h4>
                         <input type="text" name="subject" id="subject">
-                        <h4>Treść:</h4>
+                        <h4>Treść:*</h4>
                         <textarea name="body" id="body"></textarea>
-                        <h4>Telefon:*</h4>
+                        <h4>Telefon:</h4>
                         <input type="tel" name="telephone" id="telephone">
-                        <h4>E-mail:*</h4>
+                        <h4>E-mail:</h4>
                         <input type="email" name="email" id="email">
                         <input type="submit" name="submit" id="submit">
                         <div class="g-recaptcha" data-sitekey="6Lc5sKMeAAAAABm0zL2oFRYPM3_h-pZyala3b3YJ"></div>
-                        <div class="optional"><span>Pola z gwiazdką są nieobowiązkowe</span></div>
+                        <div class="optional"><span>Pola z gwiazdką są obowiązkowe</span></div>
                         <div class="message"></div>
                 </form>
             </div>
