--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                         <input type="email" name="email" id="email">
                         <input type="submit" name="submit" id="submit">
                         <div class="g-recaptcha" data-sitekey="6Lc5sKMeAAAAABm0zL2oFRYPM3_h-pZyala3b3YJ"></div>
-                        <div class="optional"><span>Pola z gwiazdką są obowiązkowe</span></div>
+                        <div class="essential"><span>Pola z gwiazdką są obowiązkowe</span></div>
                         <div class="message"></div>
                 </form>
             </div>
