--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     </span>
                 </div>
             </div>
-            <div class="flex">
+            <div class="flexStart">
                 <div class="formCheck">
                     <img src="imgs/checkForm.svg" class="formCheckImg">
                     <h2>Wysłano</h2>
